--- a/SlutServer/SlutServer.csproj
+++ b/SlutServer/SlutServer.csproj
@@ -42,8 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Account.cs" />
+    <Compile Include="AccountManager.cs" />
+    <Compile Include="PeopleManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalaryAccount.cs" />
+    <Compile Include="SavingsAccount.cs" />
+    <Compile Include="SocketManager.cs" />
+    <Compile Include="XMLManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
