--- a/SlutServer/SlutServer.csproj
+++ b/SlutServer/SlutServer.csproj
@@ -44,7 +44,8 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AccountManager.cs" />
-    <Compile Include="PeopleManager.cs" />
+    <Compile Include="Person.cs" />
+    <Compile Include="PersonManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalaryAccount.cs" />
